# api.taskforce.ai

./: .dockerignore  .env  .env.dev  .env.example  .env.prod  .gitignore  AUTHENTICATION_API.md  DEVELOPMENT_BACKLOG.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  Makefile  PROJECT_PLAN.md  README.md  TEAM_STRUCTURE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-entrypoint.sh  env.example  pyproject.toml
api/: urls.py
apps/authentication/: authentication.py  serializers.py  urls.py  views.py
apps/projects/: admin.py  models.py
apps/projects/migrations/: 0001_initial.py
apps/projects/models/: __init__.py  project.py
apps/tasks/: admin.py
apps/tasks/migrations/: 0001_initial.py
apps/tasks/models/: __init__.py  task.py
apps/teams/: admin.py  filters.py  models.py  paginations.py  serializers.py  urls.py  views.py
apps/teams/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_email.py  0003_user_github_id_user_google_id.py  0004_remove_user_github_id_remove_user_google_id.py  0005_alter_user_email.py
common/: models.py
core/: settings.py  settings_backup.py  urls.py
core/settings/: __init__.py  auth.py  base.py  common.py  cors.py  database.py  jwt.py  production.py
