[project]
name = "taskforce"
version = "0.1.0"
description = "Taskforce HQ | Your intelligent AI-powered task management HQ."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django-cors-headers>=4.7.0",
    "django-filter>=24.3",
    "django>=5.2",
    "djangorestframework-simplejwt>=5.5.0",
    "djangorestframework>=3.16.0",
    "drf-yasg>=1.21.10",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "social-auth-app-django>=5.4.3",
    "whitenoise>=6.9.0",
]

[tool.uv]
dev-dependencies = ["black>=24.1.0", "isort>=5.13.0", "ruff>=0.3.0"]
